# fastled_idf_trial

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/include/: BoardDefinitions.h
